--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@types/dom-mediacapture-record": "^1.0.11",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
-    "typescript": "^4.3.2",
+    "typescript": "^4.5.2",
     "vite": "^2.6.4"
   }
 }
