--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@types/dom-mediacapture-record": "^1.0.11",
+    "@types/node": "^16.11.12",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
