--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.2",
     "axios": "^0.24.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
