--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "@vitejs/plugin-react": "^1.0.0",
+    "eslint": "^8.4.0",
+    "eslint-plugin-react": "^7.27.1",
     "typescript": "^4.5.2",
     "vite": "^2.6.4",
     "vite-plugin-env-compatible": "^1.1.1"
