--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@typescript-eslint/parser": "^5.5.0",
     "@vitejs/plugin-react": "^1.0.0",
     "eslint": "^8.4.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
+    "prettier": "^2.5.0",
     "typescript": "^4.5.2",
     "vite": "^2.6.4",
     "vite-plugin-env-compatible": "^1.1.1"
