--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@mui/material": "^5.2.2",
     "axios": "^0.24.0",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "recoil": "^0.5.2"
   },
   "devDependencies": {
     "@types/dom-mediacapture-record": "^1.0.11",
