--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.24.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "recharts": "^2.1.6",
     "recoil": "^0.5.2"
   },
   "devDependencies": {
