--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
     "typescript": "^4.5.2",
-    "vite": "^2.6.4"
+    "vite": "^2.6.4",
+    "vite-plugin-env-compatible": "^1.1.1"
   }
 }
