--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
+    "msw": "^0.36.3",
     "prettier": "^2.5.0",
     "typescript": "^4.5.2",
     "vite": "^2.6.4",
     "vite-plugin-env-compatible": "^1.1.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
